5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1618_2929.log
== TEST (2019-04-02 10:08:25) 
-- CODE:
l=float(input("comprimento L:"))
from math import *
g=9.8

t=2pi(sqrt(l/g))

print(t)
-- ERROR:
File "XXXX", line 5
    t=2pi(sqrt(l/g))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:09:01) 
-- CODE:
l=float(input("comprimento L:"))
from math import *
g=9.8

t=2pi(sqrt(l/g))

print(t)
-- ERROR:
File "XXXX", line 5
    t=2pi(sqrt(l/g))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:09:48) 
-- CODE:
l=float(input("comprimento L:"))
from math import *
g=9.8

t=2*pi*(sqrt(l/g))

print(t)
-- OUTPUT:
8.975979010256552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:10:09) 
-- CODE:
l=float(input("comprimento L:"))
from math import *
g=9.8

t=2*pi*(sqrt(l/g))

print(t)
-- EXECUTION TIME:
0.227705
-- TEST CASE 1:
---- input:
20.0
---- correct output:
8.975979010256552
---- user output:
8.975979010256552
-- TEST CASE 2:
---- input:
168.5
---- correct output:
26.05354252683059
---- user output:
26.05354252683059
-- TEST CASE 3:
---- input:
324.2
---- correct output:
36.13876739612874
---- user output:
36.13876739612874
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
